# smart-logistics-ml-api

./: .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: db.rs  lib.rs  main.rs  package_info.rs  tracking_info.rs  utilities.rs
api/src/services/: dhl.rs  fedex.rs  mod.rs
db/: Cargo.toml
db/src/: lib.rs  schema.rs  tracking_info.rs
model/: data.py  experiment.ipynb  requirements.txt  torch_pg.ipynb  train_model.ipynb
tracking/: Cargo.toml
tracking/src/: lib.rs  main.rs  tracking_info.rs
tracking/src/services/: fedex.rs
