[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.44.2", features = ["full"] }
